--- a/index.html
+++ b/index.html
@@ -772,6 +772,15 @@
             <!-- Property listing Card End -->
 
 
+            <!-- Property Listing Section Button Start -->
+
+
+            <div class="property-listing-section-button">
+                <a class="primary-btn" href="#">View More</a>
+            </div>
+
+
+            <!-- Property Listing Section Button Start -->
 
 
         </div>
@@ -786,7 +795,7 @@
 
 
 
-    
+
 
 
     
